--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 .home,
 .services,
 .products,
+.contact,
 .sign-up {
   display: flex;
   height: 90vh;
@@ -33,6 +34,16 @@
   color: #fff;
   font-size: 100px;
 }
+
+
+.contact {
+  background-image: url('../src/assets/images/img-2.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+ }
 
 .sign-up {
  background-image: url('../src/assets/images/img-home.jpg');
