--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 .services {
   background-image: url('../src/assets/images/img-2.jpg');
   background-position: center;
-  background-size: cover;
+  background-size: fill;
   background-repeat: no-repeat;
   color: #fff;
   font-size: 100px;
