--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -5,6 +5,7 @@
 
 h1 {
   text-align: center;
+  color: #0d62a3;
 }
 
 .cards__container {
@@ -14,6 +15,7 @@ h1 {
   max-width: 1120px;
   width: 90%;
   margin: 0 auto;
+  margin-top: 20px;
 }
 
 .cards__wrapper {
